--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,7 @@
-# Built application files
-build/
-
-# Files for the ART/Dalvik VM
-*.dex
-
-# External native build folder generated in Android Studio 2.2 and later
-.externalNativeBuild
-*.apk
-*.ap_
-*.aab
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Gradle files
-.gradle/
-
-# Signing files
-.signing/
-
-# User-specific configurations
-*.iml
-
-# Log Files
-*.log
-
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
-captures/
-
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# OS-specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Version control
-vcs.xml
-
-# lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-lint/reports/
+/build
+/libs
+/src/androidTest
+#/src/test
+app.iml
+build.gradle
+proguard-rules.pro
