hometask_2 video lesson complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/build
-/libs
-/src/androidTest
-#/src/test
-app.iml
-build.gradle
-proguard-rules.pro
+# Built application files
+build/
+libs/
+.idea/
+*.iml
+src/test/
+src/androidTest
