--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,13 @@
-# Built application files
-/*/build/
-
-# Crashlytics configuations
-com_crashlytics_export_strings.xml
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Gradle generated files
-.gradle/
-build/
-gradle/
-gradlew
-gradle.properties
-gradlew.bat
-
-app/libs
-app/src/androidTest/
-
-# Signing files
-.signing/
-
-# User-specific configurations
-.idea/
 *.iml
-
-# OS-specific files
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+/build
+/captures
+.externalNativeBuild
